syntax = "proto3";

package nupi.api.v1;

option go_package = "github.com/nupi-ai/nupi/internal/api/grpc/v1;v1";

// AudioFormat describes the encoding parameters of an audio stream.
message AudioFormat {
  string encoding = 1;       // e.g. pcm_s16le
  uint32 sample_rate = 2;    // Hz
  uint32 channels = 3;       // mono=1, stereo=2
  uint32 bit_depth = 4;      // bits per sample
  uint32 frame_duration_ms = 5;
}

// AudioChunk carries a segment of audio data with sequencing metadata.
message AudioChunk {
  bytes data = 1;
  uint64 sequence = 2;
  uint32 duration_ms = 3;
  bool first = 4;
  bool last = 5;
  map<string, string> metadata = 6;
}

// StreamAudioInRequest sends captured audio frames from the client to the daemon.
message StreamAudioInRequest {
  string session_id = 1;
  string stream_id = 2;
  AudioFormat format = 3; // optional after first chunk
  AudioChunk chunk = 4;
}

// StreamAudioInResponse acknowledges the received audio and reports readiness.
message StreamAudioInResponse {
  uint64 ack_sequence = 1;
  bool ready = 2;
  string message = 3;
}

// StreamAudioOutRequest subscribes to TTS audio playback for a session.
message StreamAudioOutRequest {
  string session_id = 1;
  string stream_id = 2;
}

// StreamAudioOutResponse delivers a TTS audio chunk from the daemon.
message StreamAudioOutResponse {
  AudioFormat format = 1;
  AudioChunk chunk = 2;
}

// InterruptTTSRequest asks the daemon to stop TTS playback (barge-in).
message InterruptTTSRequest {
  string session_id = 1;
  string stream_id = 2;
  string reason = 3;
}

// GetAudioCapabilitiesRequest queries the daemon's audio I/O capabilities.
message GetAudioCapabilitiesRequest {
  string session_id = 1;
}

// AudioCapability describes a single audio capture or playback capability.
message AudioCapability {
  string stream_id = 1;
  AudioFormat format = 2;
  // General-purpose metadata map. Clients MUST NOT store ready, recommended,
  // or diagnostics in this map â€” use the dedicated fields below (4-6) instead.
  map<string, string> metadata = 3;
  // True when this capability is active and usable.
  bool ready = 4;
  // True when this is the preferred capability among alternatives of the same direction.
  bool recommended = 5;
  // Human-readable reason when ready is false; empty otherwise.
  string diagnostics = 6;
}

// GetAudioCapabilitiesResponse lists available capture and playback streams.
message GetAudioCapabilitiesResponse {
  repeated AudioCapability capture = 1;
  repeated AudioCapability playback = 2;
}
